--- a/org/cix-todo.org
+++ b/org/cix-todo.org
@@ -1,6 +1,6 @@
 # File       : cix-todo.org
 # Created    : <2017-8-06 Sun 22:58:42 BST>
-# Modified   : <2017-9-09 Sat 00:44:39 BST> sharlatan
+# Modified   : <2017-9-09 Sat 01:50:16 BST> sharlatan
 # Maintainer : sharlatan <sharlatanus@gmail.com>
 # Sinopsis   :
 
@@ -289,13 +289,13 @@ ls
 *** Links
 *** CVE
 *** papers
-** TODO Add at leas one example per cmd 
+** TODO Add at least one example per cmd 
 ** TODO Add a short intro to each cix-* files
 ** TODO Add supported systems to cix-main.org
 ** TODO Configuration files 
-*** what to include [1/5]
+*** what to include [2/5]
 - [X] vsftpd
-- [ ] grub
+- [X] grub
 - [ ] slim
 - [ ] sshd/ssh
 - [ ] 
